[package]
name = "pallet-crowdfunding-rpc"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

pallet-crowdfunding = { path = ".." }
pallet-crowdfunding-runtime-api = { path = "../runtime-api" }
